# htc-robot-ros_src

./: .gitignore  .gitmodules  DEBUG.md  INSTALL.md  PLAN.md  README.md  params.yaml  sync_2_mac.sh  sync_2_min_robot.sh  sync_2_min_robot_delete.sh  sync_2_vm.sh  sync_2_vm_melodic.sh  sync_2_vm_noetic.sh  sync_src.sh
core/control/can_adapter/: CMakeLists.txt  README.md  package.xml
core/control/twist_to_ecu/: CMakeLists.txt  package.xml
core/control/waypoint_follower/: CMakeLists.txt
core/localizer/ndt_localizer/: CMakeLists.txt  package.xml
core/map/htc_pcd_map_manager/: CMakeLists.txt  package.xml
core/map/pcd_map_mix/: CMakeLists copy.txt  CMakeLists.txt  package.xml
core/mapping/htc_ndt_mapping/: CMakeLists.txt  package.xml
core/mapping/ndt_mapping/: CMakeLists.txt  package.xml
core/msgs/htcbot_msgs/: CMakeLists.txt  package.xml
core/perception/laserscan_detector/: CMakeLists.txt  package.xml
drivers/can_odometry/: CMakeLists.txt  package.xml
drivers/can_odometry/include/: can_vehicle_info.h
drivers/can_odometry/launch/: can2odom.launch
drivers/can_test_puber/: CMakeLists.txt  package.xml
drivers/can_test_puber/scripts/: twist2ack.py
drivers/can_test_puber/src/: test_puber.cc
drivers/ndt_localization/: CMakeLists.txt
drivers/ndt_localization/params/: ndt_localization.yaml
drivers/ndt_localization/rviz/: test.rviz
drivers/ndt_localization/src/: ndt_localization.cpp  ndt_localization_node.cpp  ndt_localization_sasaki.cpp
drivers/pcd_map_manager/: CMakeLists.txt
drivers/pcd_map_manager/launch/: test_map_manager.launch
drivers/ultrasonic_driver/: CMakeLists.txt  package.xml
drivers/ultrasonic_driver/launch/: test_state_ultrasonic.launch  ultra_sonic_driver.launch
drivers/ultrasonic_driver/msg/: UltraSonicDetect.msg
drivers/ultrasonic_driver/src/: main.py  test.py
drivers/ultrasonic_driver/udev/: 70-ultrasonic.rules
drivers/waypoint_planner/: CMakeLists.txt  package.xml
drivers/waypoint_planner/launch/: astar_avoid.launch
drivers/wheeltec_gps_driver/: CMakeLists.txt  package.xml
drivers/wheeltec_gps_driver/launch/: gps_path.launch  mapviz_path.launch  wheeltec_gps_driver.launch
drivers/wheeltec_gps_driver/scripts/: GPS.py
lslidar_ros/lslidar_driver/: CMakeLists.txt
lslidar_ros/lslidar_driver/launch/: lslidar_single_serial.launch
lslidar_ros/lslidar_driver/src/: single_input.cc  single_lsiosr.cpp
lsn10p/lslidar_driver/: CMakeLists.txt
lsn10p/lslidar_driver/launch/: lslidar_serial.launch  lslidar_single_net.launch
msgs/automotive_msgs/: CMakeLists.txt  package.xml
msgs/automotive_msgs/msg/: CSHSStatus.msg  CanAdapterStatus.msg  CmdPoseRecord.msg  CmdSetSubwayinfo.msg  CmdSetTarget.msg  CmdVehicleControl.msg  ConfigMapManager.msg  ConfigSubway.msg  ConfigTrajSet.msg  ControlInfo.msg  ErrorStatus.msg  GridMapCreateConfig.msg  GridMapCreateStatus.msg  NDTMappingReq.msg  NDTMappingRes.msg  NDTStat.msg  PPTWayPointStatus.msg  PathRecordingStatus.msg  SaveMap.msg  SavePath.msg  SaveStation.msg  SetTarget.msg  ShowGraph.msg  SimpleObstacleDist.msg  SubwayInfo.msg
msgs/automotive_msgs/srv/: AvoidSwitch.srv  FunctionSwitch.srv  OnlineMapping.srv  PPTSet.srv  SmartcarRunType.srv  SmartcarSolution.srv  TransPoints.srv
msgs/demo_msgs/: CMakeLists.txt  package.xml
msgs/demo_msgs/msg/: Demo.msg
msgs/jetbot_msgs/: CMakeLists.txt  package.xml
msgs/jetbot_msgs/msg/: BoundingBox.msg
simulation/lidar_pkg/: CMakeLists.txt
simulation/map_pkg/: CMakeLists.txt  package.xml
simulation/map_pkg/src/: map_pub_node.cpp
turn_on_robot_htc/: CMakeLists.txt  package.xml
turn_on_robot_htc/config/: 2D_localization.lua  3D_localization.lua  backpack_2d.lua  backpack_3d.lua  htc_common_param.yaml  lidar_2D.lua  lidar_3D.lua
turn_on_robot_htc/costmap_common_params/param_wheeltec_mini_akm/: costmap_common_params.yaml  costmap_common_params_pure3d.yaml  teb_local_planner_params.yaml
turn_on_robot_htc/costmap_params/param_htcbot/: base_global_planner_params.yaml  teb_local_planner_params.yaml
turn_on_robot_htc/costmap_params/param_wheeltec_mini_akm/: costmap_common_params.yaml  costmap_common_params_pure3d.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml
turn_on_robot_htc/costmap_params/param_yunle_jd01/: base_global_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
turn_on_robot_htc/include/: Quaternion_Solution.h  debug_robot.h  htc_robot.h  htc_wheeltec_robot.h
turn_on_robot_htc/launch/: camera_htc.launch  debug_htc.launch  gnss_htc.launch  hello_robot.launch  imu_htc.launch  lidar_htc.launch  mapping_htc.launch  navigation_htc.launch  robot_cmd_htc.launch  robot_model_htc.launch  run_robot_htc.launch  tf_htc.launch  turn_on_robot_4_autoware.launch  turn_on_robot_debug.launch  turn_on_robot_htc.launch  turn_on_robot_yunle.launch  turn_on_robot_yunle_copy.launch
turn_on_robot_htc/launch/include/: 2d_slam_cartographer.launch  2d_slam_gmapping.launch  2d_slam_hector.launch  2d_slam_karto.launch  amcl.launch  auto_ndt_mapping.launch  base_serial.launch  cartographer_3d_map.launch  dwa_local_planner.launch  keyboard_teleop.launch  liosam_mapping.launch  move_base.launch  robot_pose_ekf.launch  rtabmap_mapping.launch  rtabmap_nav.launch  slam_gmapping.launch  slam_hector.launch  slam_karto.launch  teb_local_planner.launch
turn_on_robot_htc/map/: MAP-default.yaml  MAP.yaml  map_saver_htc.launch  test_1.yaml  test_2.yaml
turn_on_robot_htc/map/pcd/: CornerMap.pcd  GlobalMap.pcd  SurfMap.pcd  trajectory.pcd  transformations.pcd
turn_on_robot_htc/param_common/: move_base_params.yaml  wheeltec_smoother.yaml
turn_on_robot_htc/rviz/: 3d_mapping.rviz  nav.rviz  robot_urdf.rviz  slam.rviz  yunle.rviz
turn_on_robot_htc/scripts/: send_mark.py
turn_on_robot_htc/src/: Quaternion_Solution.cpp  hello_robot.cpp  htc_wheeltec_robot.cpp  htc_yunle_robot.cpp
turn_on_robot_htc/udev/: README.md  debug_udev.sh  imu_udev.sh
turn_on_robot_htc/udev/rule.d/: htc-robot-camera.rules  htc-robot-gps.rules  htc-robot-imu.rules
(+430 files in other folders)
