<?xml version="1.0"?>
<package format="2">
  <name>waypoint_planner</name>
  <version>1.12.0</version>
  <description>The waypoint_planner package</description>
  <maintainer email="aohsato@gmail.com">Akihito OHSATO</maintainer>
  <author email="aohsato@gmail.com">Akihito OHSATO</author>
  <author email="antm678@ertl.jp">ando</author>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>astar_search</depend>
  <depend>autoware_config_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>libwaypoint_follower</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>smartcar_msgs</depend>
  <depend>can_msgs</depend>

</package>
